--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
         </ul>
       </div>
       </section>
+      <div class="container">
+      <section class="customers">
+        <h2 class="customers-title">Customers</h2>
+      </section>
+    </div>
     </main>
     <!--Footer-->
     <footer class="footer"> 
