--- a/index.html
+++ b/index.html
@@ -155,6 +155,38 @@
       <div class="container">
       <section class="customers">
         <h2 class="customers-title">Customers</h2>
+        <ul class="customers-list">
+          <li class="customers-icon">
+            <svg>
+              <use href="./images/icon.svg#"></use>
+            </svg>
+          </li>
+          <li class="customers-icon">
+            <svg class="icon-item">
+              <use></use>
+            </svg>
+          </li>
+          <li class="customers-icon">
+            <svg class="icon-item">
+              <use></use>
+            </svg>
+          </li>
+          <li class="customers-icon">
+            <svg class="icon-item">
+              <use></use>
+            </svg>
+          </li>
+          <li class="customers-icon">
+            <svg class="icon-item">
+              <use></use>
+            </svg>
+          </li>
+          <li class="customers-icon">
+            <svg class="icon-item">
+              <use></use>
+            </svg>
+          </li>
+        </ul>
       </section>
     </div>
     </main>
