--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <ul class="customers-list">
           <li class="customers-icon">
             <svg>
-              <use href="./images/icon.svg#"></use>
+              <use href=""></use>
             </svg>
           </li>
           <li class="customers-icon">
