--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="privelege-list">
             <div class="icon">
             <svg class="social-list-icon" width="64" height="64">
-              <use href="./images/icon.svg#icon-antenna-1" w></use>
+              <use href="./images/icon.svg#icon-antenna-1" ></use>
             </svg></div>
             <h3 class="title">Strategy</h3>
             <p class="subtitle">Our goal is to identify the business
@@ -57,7 +57,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-clock-1" w></use>
+                <use href="./images/icon.svg#icon-clock-1" ></use>
               </svg></div>
             <h3 class="title">Punctuality</h3>
             <p class="subtitle">
@@ -67,7 +67,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-diagram-1" w></use>
+                <use href="./images/icon.svg#icon-diagram-1" ></use>
               </svg></div>
             <h3 class="title">Diligence</h3>
             <p class="subtitle">
@@ -77,7 +77,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-astronaut-1" w></use>
+                <use href="./images/icon.svg#icon-astronaut-1" ></use>
               </svg></div>
             <h3 class="title">Technologies</h3>
             <p class="subtitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
