--- a/index.html
+++ b/index.html
@@ -157,14 +157,18 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icon">
-            <svg>
+            <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item" width="104px" height="56px">
               <use href=""></use>
             </svg>
+          </a>
           </li>
           <li class="customers-icon">
-            <svg class="icon-item">
-              <use></use>
+            <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item" width="104px" height="56px">
+              <use href=""></use>
             </svg>
+            </a>
           </li>
           <li class="customers-icon">
             <svg class="icon-item">
