--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="privelege-list">
             <div class="icon">
             <svg class="social-list-icon" width="64" height="64">
-              <use href="./images/icon.svg#icon-antenna-1" ></use>
+              <use href="./images/icons.svg#icon-antenna-1" ></use>
             </svg></div>
             <h3 class="title">Strategy</h3>
             <p class="subtitle">Our goal is to identify the business
@@ -57,7 +57,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-clock-1" ></use>
+                <use href="./images/icons.svg#icon-clock-1" ></use>
               </svg></div>
             <h3 class="title">Punctuality</h3>
             <p class="subtitle">
@@ -67,7 +67,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-diagram-1" ></use>
+                <use href="./images/icons.svg#icon-diagram-1" ></use>
               </svg></div>
             <h3 class="title">Diligence</h3>
             <p class="subtitle">
@@ -77,7 +77,7 @@
           <li class="privelege-list">
             <div class="icon">
               <svg class="social-list-icon" width="64" height="64">
-                <use href="./images/icon.svg#icon-astronaut-1" ></use>
+                <use href="./images/icons.svg#icon-astronaut-1" ></use>
               </svg></div>
             <h3 class="title">Technologies</h3>
             <p class="subtitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -159,36 +159,44 @@
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" width="104px" height="56px">
-              <use href=""></use>
+              <use href="./images/icons.svg#"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" width="104px" height="56px">
-              <use href=""></use>
+              <use href="./images/icons.svg#"></use>
             </svg>
             </a>
           </li>
           <li class="customers-icon">
-            <svg class="icon-item">
-              <use></use>
+             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item"  width="104px" height="56px">
+              <use href="./images/icons.svg#"></use>
             </svg>
+          </a>
           </li>
           <li class="customers-icon">
-            <svg class="icon-item">
-              <use></use>
+             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item"  width="104px" height="56px">
+              <use href="./images/icons.svg#"></use>
             </svg>
+          </a>
           </li>
           <li class="customers-icon">
-            <svg class="icon-item">
-              <use></use>
+             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item"  width="104px" height="56px">
+              <use href="./images/icons.svg#"></use>
             </svg>
+          </a>
           </li>
           <li class="customers-icon">
-            <svg class="icon-item">
-              <use></use>
+             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-item"  width="104px" height="56px">
+              <use href="./images/icons.svg#"></use>
             </svg>
+          </a>
           </li>
         </ul>
       </div>
