--- a/index.html
+++ b/index.html
@@ -159,42 +159,42 @@
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </a>
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo-3"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo-4"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
-              <use href="./images/icons.svg#"></use>
+              <use href="./images/icons.svg#icon-Logo-5"></use>
             </svg>
           </a>
           </li>
