--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item"  width="104px" height="56px">
+            <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-4"></use>
             </svg>
           </a>
@@ -204,9 +204,14 @@
     </main>
     <!--Footer-->
     <footer class="footer"> 
-      <div class="container">
+      <div class="container footer-container ">
+        <div class="container-logo">
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
+    </div>
+     </div>
+     <div>
+      <p class="social-media-text">Social media</p>
      </div>
     </footer>
   </body>
