--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <nav class="page-nav">
       <a href="./index.html" class="logo link">Web<span class="top-logo link">Studio</span></a>
         <ul class=" menu-list">
-          <li class="nav-item"><a href="./index.html" class="link contact-list">Studio</a></li>
-          <li class="nav-item"><a href="./portfolio.html" class="link contact-list">Portfolio</a></li>
-          <li class="nav-item"><a href="" class="link contact-list">Contacts</a></li>
+          <li><a href="./index.html" class="link contact-list">Studio</a></li>
+          <li><a href="./portfolio.html" class="link contact-list">Portfolio</a></li>
+          <li><a href="" class="link contact-list">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -158,8 +158,8 @@
         <ul class="customers-list">
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-Logo"></use>
+            <svg class="icon-item" >
+              <use href="./images/icons.svg#icon-Logo" width="104px" height="56px" ></use>
             </svg>
           </a>
           </li>
