--- a/index.html
+++ b/index.html
@@ -111,6 +111,36 @@
             <div class="job-title">
             <h3 class="title persona-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
+            <ul class="social-media">
+              <li class="social-media-item" >
+                <a class href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <svg  width: 40px; height:40px;>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg>
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg>
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg>
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="team-list-item">
@@ -157,9 +187,9 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icon">
-            <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <a href="" class="link-icon" width="104px" height="56px"  target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" >
-              <use href="./images/icons.svg#icon-Logo" width="104px" height="56px" ></use>
+              <use href="./images/icons.svg#icon-Logo" ></use>
             </svg>
           </a>
           </li>
