--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </li>
               <li>
                 <a href="">
-                  <svg>
+                  <svg width: 40px; height:40px;>
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
