--- a/index.html
+++ b/index.html
@@ -113,28 +113,28 @@
             <p class="text">Product Designer</p>
             <ul class="social-media">
               <li class="social-media-item" >
-                <a class href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg  width: 40px; height:40px;>
+                <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <svg width:16px height:16px>
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="">
-                  <svg width: 40px; height:40px;>
+                <a class="social-icon" href="index.html">
+                  <svg >
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a class="social-icon" href="index.html">
                   <svg>
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a class="social-icon" href="index.html">
                   <svg>
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
