--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg width:16px height:16px>
+                  <svg width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg >
+                  <svg width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg>
+                  <svg width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg>
+                  <svg width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -195,14 +195,14 @@
           </li>
           <li class="customers-icon">
             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item" width="104px" height="56px">
+            <svg class="icon-item" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </a>
           </li>
           <li class="customers-icon">
              <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item"  width="104px" height="56px">
+            <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
           </a>
