--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg width="16" height="16">
+                  <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg width="16" height="16">
+                  <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg width="16" height="16">
+                  <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="social-icon" href="index.html">
-                  <svg width="16" height="16">
+                  <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -153,6 +153,36 @@
             <div class="job-title">
             <h3 class="title persona-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
+            <ul class="social-media">
+              <li class="social-media-item" >
+                <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="team-list-item">
@@ -165,6 +195,36 @@
             <div class="job-title">
             <h3 class="title persona-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
+            <ul class="social-media">
+              <li class="social-media-item" >
+                <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="team-list-item">
@@ -177,6 +237,36 @@
             <div class="job-title">
             <h3 class="title persona-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
+            <ul class="social-media">
+              <li class="social-media-item" >
+                <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-icon" href="index.html">
+                  <svg class="fiil" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
         </ul>
