--- a/index.html
+++ b/index.html
@@ -203,21 +203,21 @@
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
