--- a/index.html
+++ b/index.html
@@ -277,42 +277,42 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icon">
-            <a href="" class="link-icon" width="104px" height="56px"  target="_blank" rel="noopener noreferrer">
+            <a href="index.html" class="link-icon" width="104px" height="56px"  target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" >
               <use href="./images/icons.svg#icon-Logo" ></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
-            <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+            <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </a>
           </li>
           <li class="customers-icon">
-             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
-             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
               <use href="./images/icons.svg#icon-Logo-3"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
-             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-4"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
-             <a href="" class="link-icon" target="_blank" rel="noopener noreferrer">
+             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item"  width="104px" height="56px">
               <use href="./images/icons.svg#icon-Logo-5"></use>
             </svg>
