--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icon">
-            <a href="index.html" class="link-icon" width="104px" height="56px"  target="_blank" rel="noopener noreferrer">
+            <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
             <svg class="icon-item" >
               <use href="./images/icons.svg#icon-Logo" ></use>
             </svg>
