--- a/index.html
+++ b/index.html
@@ -328,10 +328,40 @@
         <div class="container-logo">
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
+    </div>
+     </div>
      <div>
       <p class="social-media-text">Social media</p>
-     </div>
-    </div>
+      <ul class="social-media">
+        <li class="social-media-item" >
+          <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
+            <svg class="fiil" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="social-icon" href="index.html">
+            <svg class="fiil" width="16" height="16">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="social-icon" href="index.html">
+            <svg class="fiil" width="16" height="16">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="social-icon" href="index.html">
+            <svg class="fiil" width="16" height="16">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
      </div>
     </footer>
   </body>
