--- a/index.html
+++ b/index.html
@@ -329,6 +329,36 @@
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
      <p class="social-media-text">Social media</p>
+     <ul>
+      <li>
+        <a href="">
+          <svg>
+            <use></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <svg>
+            <use></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <svg>
+            <use></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <svg>
+            <use></use>
+          </svg>
+        </a>
+      </li>
+     </ul>
     </div>
      </div>
      <!-- <div>
