--- a/index.html
+++ b/index.html
@@ -329,32 +329,32 @@
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
      <p class="social-media-text">Social media</p>
-     <ul>
-      <li>
+     <ul class="social-media">
+      <li class="social-media-item">
         <a href="">
           <svg>
-            <use></use>
+            <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
-      <li>
+      <li class="social-media-item">
         <a href="">
           <svg>
-            <use></use>
+            <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
-      <li>
+      <li class="social-media-item">
         <a href="">
           <svg>
-            <use></use>
+            <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
-      <li>
+      <li class="social-media-item">
         <a href="">
           <svg>
-            <use></use>
+            <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
         </a>
       </li>
