--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
         <div class="container-logo">
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
-     <p class="social-media-text">Social media</p>
+     <div>
+      <p class="social-media-text">Social media</p>
      <ul class="social-media">
       <li class="social-media-item">
         <a href="">
@@ -359,12 +360,9 @@
         </a>
       </li>
      </ul>
+     </div>
     </div>
      </div>
-     <!-- <div>
-      <p class="social-media-text">Social media</p>
-      
-     </div> -->
     </footer>
   </body>
 </html>
