--- a/index.html
+++ b/index.html
@@ -330,31 +330,31 @@
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
      <div>
       <p class="social-media-text">Social media</p>
-     <ul class="social-media">
+     <ul class="social-media-footer">
       <li class="social-media-item">
-        <a href="">
-          <svg>
+        <a class="link-footer" href="index.html">
+          <svg class="fiil" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
-        <a href="">
-          <svg>
+        <a class="link-footer" href="index.html">
+          <svg class="fiil" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
-        <a href="">
-          <svg>
+        <a class="link-footer" href="index.html">
+          <svg class="fiil" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
-        <a href="">
-          <svg>
+        <a class="link-footer" href="index.html">
+          <svg class="fiil" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
         </a>
