--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
         <div class="container-logo">
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
      <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
-     
+    </div>
+     <div class="footer-icon">
       <p class="social-media-text">Social media</p>
      <ul class="social-media-footer">
       <li class="social-media-item">
@@ -360,9 +361,8 @@
         </a>
       </li>
      </ul>
-     
     </div>
-     </div>
+    </div>
     </footer>
   </body>
 </html>
