--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </li>
           <li class="customers-icon">
             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item" width="104px" height="56px">
+            <svg class="icon-item" width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </a>
@@ -299,21 +299,21 @@
           </li>
           <li class="customers-icon">
              <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item"  width="104px" height="56px">
+            <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-3"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
              <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item"  width="104px" height="56px">
+            <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-4"></use>
             </svg>
           </a>
           </li>
           <li class="customers-icon">
              <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item"  width="104px" height="56px">
+            <svg class="icon-item"  width="104" height="56">
               <use href="./images/icons.svg#icon-Logo-5"></use>
             </svg>
           </a>
